fix horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -3,17 +3,26 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
 
-body, html {
+body {
     font-family: 'Oxygen', sans-serif;
     height: 100%;
     /* background-color: #fafafa;     */
 }
 
+body * {
+    max-width: 100vw;
+}
 
-.bg-home { 
+.container{
+    overflow-x: hidden;
+}
+
+
+.bg-home {
     /* The image used */
     background-image: url("Image/animation.gif");
     background-color: #d6cbc2;
+    
 
     /* Full height */
     height: 100vh; 
